# telegram-serverless-echo

./: .gitignore  README.md  build_lambda.sh  pyproject.toml
echo/: bot.py
terraform/: main.tf
